--- a/Project_sem_3/Areas/Admin/Views/Contracts/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Contracts/Index.cshtml
@@ -15,6 +15,27 @@
         <!-- Page Heading -->
         <h1 class="h3 mb-2 text-gray-800">Contracts</h1>
         <p class="mb-4"> All contracts of customers about insurances .</p>
+        <div class="card-footer">
+            <div class="row mt-3">
+                <div class="col-3 mt-2">
+                    <div class="form-group mr-3">
+                        <select class="form-control mr-2" id="select-action">
+                            <option value="6">--Chọn thao tác--</option>
+                            <option value="5">Pending</option>
+                            <option value="4">Confirmed</option>
+                            <option value="3">Shipping</option>
+                            <option value="2">Paid</option>
+                            <option value="1">Done</option>
+                            <option value="0">Cancel</option>
+                            <option value="-1">Deleted</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-9">
+                        <button type="button" id="action_contract">Xác nhận</button>
+                </div>
+            </div>
+        </div>
 
         <!-- DataTales Example -->
         <div class="card shadow mb-4">
@@ -26,16 +47,29 @@
                     <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
                         <div class="row"><div class="col-sm-12 col-md-6"><div class="dataTables_length" id="dataTable_length"><label>Show <select name="dataTable_length" aria-controls="dataTable" class="custom-select custom-select-sm form-control form-control-sm"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select> entries</label></div></div><div class="col-sm-12 col-md-6"><div id="dataTable_filter" class="dataTables_filter"><label>Search:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="dataTable"></label></div></div></div><div class="row">
                             <div class="col-sm-12">
-                                <table class="table table-bordered dataTable" id="dataTable" width="100%" cellspacing="0" role="grid" aria-describedby="dataTable_info" style="width: 100%;">    
+                                <table class="table table-bordered dataTable" id="dataTable" width="100%" cellspacing="0" role="grid" aria-describedby="dataTable_info" style="width: 100%;">
                                     <thead>
-                                    <tr><th rowspan="1" colspan="1">Name</th><th rowspan="1" colspan="1">CustomerID</th><th rowspan="1" colspan="1">Total Price</th><th rowspan="1" colspan="1">Created At</th><th rowspan="1" colspan="1">Updated At</th><th rowspan="1" colspan="1">Status</th><th rowspan="1" colspan="1">Action</th></tr>  
+                                        <tr>
+                                            <th rowspan="1" colspan="1"><input type="checkbox" id="checkAll" />Select All</th>
+                                            <th rowspan="1" colspan="1">Name</th>
+                                            <th rowspan="1" colspan="1">CustomerID</th>
+                                            <th rowspan="1" colspan="1">Total Price</th>
+                                            <th rowspan="1" colspan="1">Created At</th>
+                                            <th rowspan="1" colspan="1">Updated At</th>
+                                            <th rowspan="1" colspan="1">Status</th>
+                                            <th rowspan="1" colspan="1">Action</th>
+                                        </tr>
                                     </thead>
-                                    
+
                                     <tbody>
-                                       
-                                            @foreach (var item in Model)
-                                            {
-                                                <tr role="row" class="odd">
+
+                                        @foreach (var item in Model)
+                                        {
+                                            <tr role="row" class="odd">
+                                                <td>
+                                                    <input type="checkbox" class="check" value="@item.Id" />
+                                                    @Html.AntiForgeryToken()
+                                                </td>
                                                 <td class="sorting_1">
                                                     @item.Insurance.Name
                                                 </td>
@@ -57,10 +91,10 @@
                                                         }
                                                     </button>
                                                     <button class="button button3">@Html.ActionLink("Delete", "Delete", new { id = item.Id })</button>
-                                    </td>    
-                                                </tr>
-                                    }
-                                       
+                                                </td>
+                                            </tr>
+                                        }
+
                                     </tbody>
                                 </table>
                             </div>
@@ -74,3 +108,51 @@
     <!-- /.container-fluid -->
 </div>
 <!-- End of Main Content -->
+@section Scripts{
+    @Scripts.Render("~/bundles/jqueryval")
+    <script type="text/javascript">
+        $(document).ready(function () {
+            var selectedIDs = new Array();
+            $('#checkAll').click(function () {
+                $(".check").prop('checked',
+                    $(this).prop('checked'));
+            })
+        })
+
+        $('#action_contract').click(function () {
+            var selectedIDs = new Array();
+            var action = $('#select-action').val();
+            if (action == 6) {
+                alert('Please select the action you want to perform!');
+                return;
+            }
+            $('input:checkbox.check').each(function () {
+                if ($(this).prop('checked')) {
+                    selectedIDs.push($(this).val());
+                }
+            });
+            if (selectedIDs.length <= 0) {
+                alert('You have not selected a contract!');
+                return;
+                }
+            $.ajax({
+                url: "/Admin/Contracts/StatusOrder",
+                type: "POST",
+                dataType: "json",
+                data: {
+                    __RequestVerificationToken: $('input[name=__RequestVerificationToken]').val(),
+                    selectedIDs,
+                    action
+                },
+                success: function (res) {
+                    if (!res == false) {
+                        window.location.href = `/Admin/Contracts`;
+                    }
+                    },
+                    error: function () {
+                        alert('error');
+                    }
+                });
+            })
+    </script>
+}
