--- a/Project_sem_3/Views/Accounts/Login.cshtml
+++ b/Project_sem_3/Views/Accounts/Login.cshtml
@@ -1,7 +1,67 @@
 ﻿
+
+
+
+
+
+
 @{
-    ViewBag.Title = "Login";
+    ViewBag.Title = "Register";
 }
 
-<h2>Login</h2>
+@*<h2>@ViewBag.Title.</h2>
 
+    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        <h4>Create a new account.</h4>
+        <hr />
+        @Html.ValidationSummary("", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" class="btn btn-default" value="Register" />
+            </div>
+        </div>
+    }
+
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }*@
+
+<div class="container">
+    <div class="offset-md-4 col-md-4" style="margin-top:50px;margin-bottom:50px">
+
+
+        <form action="/Accounts/Login" method="post">
+            <div class="form-group">
+                <label for="exampleFormControlInput1">user name</label>
+                <input type="email" name="email" class="form-control" id="exampleFormControlInput1" placeholder="user name">
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlInput1">Password</label>
+                <input type="password" name="password" class="form-control" id="exampleFormControlInput1" placeholder="password">
+            </div>
+
+
+            <button type="submit" class="btn btn-primary">Login</button>
+        </form>
+    </div>
+</div>
