--- a/Project_sem_3/Views/Shared/_Layout.cshtml
+++ b/Project_sem_3/Views/Shared/_Layout.cshtml
@@ -85,8 +85,7 @@
                     <div style="float:right;font-size:20px;    margin-top: 10px;" class="main-navigation">
 
                         <ul class="menu">
-                            <li class="menu-item"><a href="/Account/Login">Login</a></li>
-                            <li class="menu-item"><a href="/Account/Register">Register</a></li>
+                            @Html.Partial("_LoginPartial")
                         </ul>
                     </div>
 
